<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewFlightActivity">

    <EditText
        android:id="@+id/flightNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/flight_flight_number"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/departureTimeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/flight_departure_time"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/arrivalCityEditText"
        app:layout_constraintTop_toBottomOf="@+id/arrivalCityEditText" />

    <Button
        android:id="@+id/createFlightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/create_button"
        app:layout_constraintStart_toStartOf="@+id/priceInformationEditText"
        app:layout_constraintTop_toBottomOf="@+id/priceInformationEditText" />

    <EditText
        android:id="@+id/flightCapacityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/flight_flight_capacity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/departureTimeEditText"
        app:layout_constraintTop_toBottomOf="@+id/departureTimeEditText" />

    <EditText
        android:id="@+id/priceInformationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/flight_price_information"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/flightCapacityEditText"
        app:layout_constraintTop_toBottomOf="@+id/flightCapacityEditText" />

    <EditText
        android:id="@+id/departureCityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/departure_city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/flightNumberEditText"
        app:layout_constraintTop_toBottomOf="@+id/flightNumberEditText" />

    <EditText
        android:id="@+id/arrivalCityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:hint="@string/arrival_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/departureCityEditText"
        app:layout_constraintTop_toBottomOf="@+id/departureCityEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>