<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterDepartureAndArrivalInformationActivity">

    <EditText
        android:id="@+id/depatureEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/departure_city"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/arrivalEditText"
        app:layout_constraintStart_toStartOf="@+id/arrivalEditText" />

    <EditText
        android:id="@+id/arrivalEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="182dp"
        android:ems="10"
        android:hint="@string/arrival_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/numberOfTicketsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/number_of_tickets"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/arrivalEditText"
        app:layout_constraintTop_toBottomOf="@+id/arrivalEditText" />

    <Button
        android:id="@+id/searchFlightsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="22dp"
        android:text="@string/flight_search"
        app:layout_constraintEnd_toEndOf="@+id/numberOfTicketsEditText"
        app:layout_constraintTop_toBottomOf="@+id/numberOfTicketsEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>