<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFlightConfirmationActivity">

    <TextView
        android:id="@+id/flightTextView"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="62dp"
        android:text="@string/please_confirm"
        app:layout_constraintBottom_toTopOf="@+id/confirmBUtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="415dp"
        android:text="@string/confirmation_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/confirmBUtton"
        app:layout_constraintTop_toBottomOf="@+id/confirmBUtton" />

    <Button
        android:id="@+id/confirmBUtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/confirmation_yes"
        app:layout_constraintBottom_toTopOf="@+id/goBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flightTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>